--- a/DailyQuotesWebApp/DailyQuotesWebApp.csproj
+++ b/DailyQuotesWebApp/DailyQuotesWebApp.csproj
@@ -244,6 +244,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ActionResult.cs" />
     <Compile Include="Controllers\QuotesController.cs" />
     <Compile Include="Controllers\QuotesWebAPIController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
